docs: update README with wallet balance analysis anddocs: update README with wallet balance analysis and visualization features

--- a/ip_operations_and_performance.ipynb
+++ b/ip_operations_and_performance.ipynb
@@ -176,6 +176,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8e8cf1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def application(tk):\n",
+    "\n",
+    "    operations_data = pd.read_excel(\"operations_data.xlsx\")\n",
+    "    df_calcs_operations = calcs_operations(operations_data, tk)\n",
+    "\n",
+    "    df_yf = data_yf(tk, df_calcs_operations)\n",
+    "    df_return = calcs_return(df_yf)\n",
+    "        \n",
+    "    df_sp500_yf = calcs_return(data_yf('^GSPC', df_calcs_operations))\n",
+    "    df_ibov_yf = calcs_return(data_yf('^BVSP', df_calcs_operations))\n",
+    "\n",
+    "    plot_operations(df_calcs_operations, tk, df_yf)\n",
+    "\n",
+    "    plot_return(df_return, tk, df_sp500_yf, df_ibov_yf)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "927fb33f",
    "metadata": {},
@@ -186,66 +209,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4f1d9cd",
+   "id": "af43e641",
    "metadata": {},
    "outputs": [],
    "source": [
-    "TICKER = 'QQQM'"
+    "tickers = ['QQQM', 'SCHD', 'USMV', 'SGOV', 'VGK']\n",
+    "\n",
+    "for ticker in tickers:\n",
+    "    \n",
+    "    print(f\"Processing {ticker}...\")\n",
+    "    application(ticker)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acf93bcd",
+   "cell_type": "markdown",
+   "id": "2a580488",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "operations_data = pd.read_excel(\"operations_data.xlsx\")\n",
-    "df_calcs_operations = calcs_operations(operations_data, TICKER)\n",
-    "display(df_calcs_operations)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c68b06d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_yf = data_yf(TICKER, df_calcs_operations)\n",
-    "df_return = calcs_return(df_yf)\n",
-    "display(df_return)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8004f789",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_sp500_yf = calcs_return(data_yf('^GSPC', df_calcs_operations))\n",
-    "df_ibov_yf = calcs_return(data_yf('^BVSP', df_calcs_operations))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c815dd49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_operations(df_calcs_operations, TICKER, df_yf)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "896be779",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_return(df_return, TICKER, df_sp500_yf, df_ibov_yf)"
+    "---"
    ]
   }
  ],
