testing real data

--- a/ip_operations_and_performance.ipynb
+++ b/ip_operations_and_performance.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "258b2247",
    "metadata": {},
    "outputs": [],
@@ -57,13 +57,17 @@
    "source": [
     "def data_yf(tk, df):\n",
     "\n",
-    "    start = df['date'].iloc[0] # date of the first operation\n",
-    "    end = pd.to_datetime(\"today\").normalize() # date of today\n",
-    "    ndays = (end - start).days\n",
+    "    # guard: ensure we have at least one operation date\n",
+    "    if df.empty:\n",
+    "        raise ValueError(f\"No operations found for ticker {tk}\")\n",
     "\n",
-    "    data = yf.Ticker(tk)\n",
-    "    data = data.history(period=f\"{ndays}d\", start=start, end=end)\n",
-    "    \n",
+    "    start = pd.to_datetime(df['date'].iloc[0]).normalize()  # date of the first operation\n",
+    "    end = pd.to_datetime(\"today\").normalize()  # date of today\n",
+    "\n",
+    "    # use start and end (do NOT pass period together with start/end)\n",
+    "    ticker = yf.Ticker(tk)\n",
+    "    data = ticker.history(start=start, end=end)\n",
+    "\n",
     "    return data"
    ]
   },
@@ -184,7 +188,7 @@
    "source": [
     "def application(tk):\n",
     "\n",
-    "    operations_data = pd.read_excel(\"operations_data.xlsx\")\n",
+    "    operations_data = pd.read_excel(\"real_operations_data.xlsx\")\n",
     "    df_calcs_operations = calcs_operations(operations_data, tk)\n",
     "\n",
     "    df_yf = data_yf(tk, df_calcs_operations)\n",
